library: fix main page vert overflow for <=480px

--- a/assets/css/library.scss
+++ b/assets/css/library.scss
@@ -94,6 +94,8 @@ background-position: 96% 50px;
   border-top: $separator-style;
 }
 
+overflow: hidden;
+
 }
 
 }
